tests/import_infer_name_bad.stderr
tests/import_infer_name_bad.sl:2:1: error: SL2021: cannot infer package identifier; use 'import "a/b-c" as <name>'
