tests/import_infer_name_bad.sl
// Verifies import inference name is rejected.
import "a/b-c"

fn main() {}
